syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.javainuse.orders";


service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
}

message CreateOrderRequest {
  Order order = 1;
}

message Order {
  int32 order_id = 1;
  string order_status = 2;
  google.protobuf.Timestamp delivery_date = 3;
  repeated OrderItem order_items = 4;
  int32 user_id = 5;
}

message OrderItem {
  int32 order_item_id = 1;
  int32 item_id = 2;
  int32 quantity_to_pick = 3;
}

message OrderResponse {
  bool success = 1;
  string message = 2;
  Order order = 3;
}